[gd_scene load_steps=5 format=3 uid="uid://dtb7exeoc2k2f"]

[ext_resource type="Script" path="res://Scenes/Prefabs/UI/MenuScreen.gd" id="1_3gj4j"]
[ext_resource type="Theme" uid="uid://bpasfuqc5uncj" path="res://Assets/default_theme.tres" id="1_bwjku"]
[ext_resource type="Texture2D" uid="uid://b6ohid8vrn0mi" path="res://Assets/UI/btn_menu_v_start_active.png" id="3_qigo5"]
[ext_resource type="Texture2D" uid="uid://wruchxntmktk" path="res://Assets/UI/btn_menu_v_start_hover.png" id="4_mwje1"]

[node name="MenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_bwjku")
script = ExtResource("1_3gj4j")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 322.0
offset_top = -448.0
offset_right = 444.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="LocalButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_qigo5")
texture_hover = ExtResource("4_mwje1")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LocalButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 180.0
grow_horizontal = 2
grow_vertical = 2
text = "TITLE_MENU_LOCAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_qigo5")
texture_hover = ExtResource("4_mwje1")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SettingsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 170.0
offset_top = -13.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "TITLE_MENU_SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_qigo5")
texture_hover = ExtResource("4_mwje1")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CreditsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 170.0
offset_top = -17.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "TITLE_MENU_CREDITS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_qigo5")
texture_hover = ExtResource("4_mwje1")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 176.0
grow_horizontal = 2
grow_vertical = 2
text = "TITLE_MENU_EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/LocalButton" to="." method="_on_LocalButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
